--- a/src/app/styles.module.scss
+++ b/src/app/styles.module.scss
@@ -1,8 +1,3 @@
-@font-face {
-    font-family: Montserrat bold;
-    src: url("./fonts/MontserratAlternates-Bold.woff2");
-}
-
 .container {
     --whity: #DFE4F0;
 
@@ -16,7 +11,8 @@
         color: var(--whity);
         font-size: 3.5em;
         text-align: center;
-        font-family: Montserrat bold;
+        font-family: var(--montserrat);
+        font-weight: 700;
         margin-bottom: 10px;
         text-shadow: #000 3px 2px 2px;
     }
@@ -28,7 +24,8 @@
         text-shadow: #000 7px 5px 5px;
         font-size: 7.5em;
         text-align: center;
-        font-family: Montserrat bold;
+        font-family: var(--montserrat);
+        font-weight: 700;
         margin-bottom: 50px;
         letter-spacing: 30px;
     }
@@ -38,7 +35,8 @@
     width: 180px;
     background-color: #000;
     border-radius: 50px;
-    font-family: Montserrat Bold;
+    font-family: var(--montserrat);
+    font-weight: 700;
     font-size: 16px;
     color: #ffffff;
     padding: 15px 32px;
