--- a/src/components/barista/styles.module.css
+++ b/src/components/barista/styles.module.css
@@ -1,33 +1,3 @@
-@font-face {
-	font-family: Montserrat Alternates;
-	src: url("./../../app/fonts/MontserratAlternates-Medium.woff2");
-}
-
-@font-face {
-	font-family: Montserrat Alternates Bold;
-	src: url("./../../app/fonts/MontserratAlternates-Bold.woff2");
-}
-
-@font-face {
-	font-family: Montserrat Alternates ExtraLight;
-	src: url("./../../app/fonts/MontserratAlternates-ExtraLight.woff2");
-}
-
-@font-face {
-	font-family: Montserrat Alternates Light;
-	src: url("./../../app/fonts/MontserratAlternates-Light.woff2");
-}
-
-@font-face {
-	font-family: Montserrat Alternates Regular;
-	src: url("./../../app/fonts/MontserratAlternates-Regular.woff2");
-}
-
-@font-face {
-	font-family: Montserrat Alternates Thin;
-	src: url("./../../app/fonts/MontserratAlternates-Thin.woff2");
-}
-
 .container {
 	min-height: 100vh;
 	background-color: black;
@@ -38,7 +8,8 @@
 
 .title {
 	color: white;
-    font-family: Montserrat Alternates Bold;
+    font-family: var(--montserrat);
+	font-weight: 700;
     font-size: 38px;
 	margin-bottom: 40px;
 	padding-top: 60px;
@@ -48,7 +19,8 @@
 
 .subtitle {
 	color: white;
-    font-family: Montserrat Alternates Light;
+	font-family: var(--montserrat);
+	font-weight: 300;
     font-size: 22px;
 	margin-bottom: 100px;
 	text-align: center;
