--- a/src/components/footer/styles.module.css
+++ b/src/components/footer/styles.module.css
@@ -1,33 +1,3 @@
-@font-face {
-	font-family: Montserrat Alternates;
-	src: url("./../../app/fonts/MontserratAlternates-Medium.woff2");
-}
-
-@font-face {
-	font-family: Montserrat Alternates Bold;
-	src: url("./../../app/fonts/MontserratAlternates-Bold.woff2");
-}
-
-@font-face {
-	font-family: Montserrat Alternates ExtraLight;
-	src: url("./../../app/fonts/MontserratAlternates-ExtraLight.woff2");
-}
-
-@font-face {
-	font-family: Montserrat Alternates Light;
-	src: url("./../../app/fonts/MontserratAlternates-Light.woff2");
-}
-
-@font-face {
-	font-family: Montserrat Alternates Regular;
-	src: url("./../../app/fonts/MontserratAlternates-Regular.woff2");
-}
-
-@font-face {
-	font-family: Montserrat Alternates Thin;
-	src: url("./../../app/fonts/MontserratAlternates-Thin.woff2");
-}
-
 .container {
 	width: 100vw;
 	height: 100vh;
@@ -44,12 +14,14 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	font-family: Montserrat Alternates Light;
+	font-family: var(--montserrat);
+	font-weight: 300;
 	text-decoration: none;
 }
 
 .title {
-	font-family: Montserrat Alternates bold;
+	font-family: var(--montserrat);
+	font-weight: 700;
     margin-bottom: 20px;
 	text-align: center;
 	max-width: 80%;
@@ -63,7 +35,8 @@
 
 .line a {
 	text-decoration: none;
-	font-family: Montserrat Alternates semibold;
+	font-family: var(--montserrat);
+	font-weight: 600;
 	color: #ff8562;
 }
 
