--- a/src/components/menu/position.module.scss
+++ b/src/components/menu/position.module.scss
@@ -1,23 +1,3 @@
-@font-face {
-	font-family: Montserrat;
-	src: url("./../../app/fonts/MontserratAlternates-Medium.woff2");
-}
-
-@font-face {
-	font-family: Montserrat Bold;
-	src: url("./../../app/fonts/MontserratAlternates-Bold.woff2");
-}
-
-@font-face {
-	font-family: Montserrat semibold;
-	src: url("./../../app/fonts/MontserratAlternates-SemiBold.woff2");
-}
-
-@font-face {
-	font-family: Montserrat regular;
-	src: url("./../../app/fonts/MontserratAlternates-Regular.woff2");
-}
-
 .item {
 	position: relative;
 	display: flex;
@@ -65,8 +45,6 @@
 		float: none;
 	}
 }
-
-
 
 
 .front {
@@ -126,7 +104,8 @@
 
 .kpfc {
 	padding: 12px 5px;
-    font-family: Montserrat semibold;
+	font-family: var(--montserrat);
+	font-weight: 600;
     font-size: 14px;
     border-radius: 20px;
 	white-space: pre-line;
@@ -136,7 +115,8 @@
 	text-align:left;
 	padding: 12px 5px;
 	max-width: 100%;
-    font-family: Montserrat;
+	font-family: var(--montserrat);
+	font-weight: 500;
 	white-space: pre-line;
 }
 
@@ -144,7 +124,8 @@
 
 .name {
 	max-width: 280px;
-	font-family: Montserrat semibold;
+	font-family: var(--montserrat);
+	font-weight: 600;
     font-size: 22px;
 	padding-left: 3px;
 	margin-bottom: 10px;
@@ -152,14 +133,16 @@
 }
 
 .g {
-	font-family: Montserrat regular;
+	font-family: var(--montserrat);
+	font-weight: 400;
     font-size: 20px;
 	padding-left: 3px;
 	margin-bottom: 3px;
 }
 
 .price {
-	font-family: Montserrat regular;
+	font-family: var(--montserrat);
+	font-weight: 400;
     font-size: 20px;
 	padding-left: 3px;
 }
