--- a/src/components/menu/styles.module.css
+++ b/src/components/menu/styles.module.css
@@ -18,7 +18,8 @@
 }
 
 .title {
-	font-family: Montserrat bold;
+	font-family: var(--montserrat);
+	font-weight: 700;
 }
 
 .links {
@@ -42,7 +43,8 @@
 	border-radius: 30px;
 	color: #000;
 	display: flex; align-items: center; justify-content: center;
-	font-family: Montserrat bold;
+	font-family: var(--montserrat);
+	font-weight: 700;
     text-decoration: none; text-transform: uppercase;
     transition: all .3s;
 	scroll-behavior: smooth;
@@ -61,7 +63,8 @@
 }
 
 .unitTitle {
-	font-family: Montserrat bold;
+	font-family: var(--montserrat);
+	font-weight: 700;
 	max-width: 80vw;
     margin-bottom: 35px;
 	text-transform: uppercase;
@@ -85,7 +88,8 @@
 }
 
 .unitSubtitle {
-	font-family: Montserrat bold;
+	font-family: var(--montserrat);
+	font-weight: 700;
 	text-align: center;
     margin-bottom: 60px;
 	text-align: center;
