--- a/src/components/partners/company/styles.module.css
+++ b/src/components/partners/company/styles.module.css
@@ -1,38 +1,3 @@
-@font-face {
-	font-family: Montserrat Alternates;
-	src: url("./../../../app/fonts/MontserratAlternates-Medium.woff2");
-}
-
-@font-face {
-	font-family: Montserrat Alternates Bold;
-	src: url("./../../../app/fonts/MontserratAlternates-Bold.woff2");
-}
-
-@font-face {
-	font-family: Montserrat Alternates semibold;
-	src: url("./../../../app/fonts/MontserratAlternates-SemiBold.woff2");
-}
-
-@font-face {
-	font-family: Montserrat Alternates ExtraLight;
-	src: url("./../../../app/fonts/MontserratAlternates-ExtraLight.woff2");
-}
-
-@font-face {
-	font-family: Montserrat Alternates Light;
-	src: url("./../../../app/fonts/MontserratAlternates-Light.woff2");
-}
-
-@font-face {
-	font-family: Montserrat Alternates Regular;
-	src: url("./../../../app/fonts/MontserratAlternates-Regular.woff2");
-}
-
-@font-face {
-	font-family: Montserrat Alternates Thin;
-	src: url("./../../../app/fonts/MontserratAlternates-Thin.woff2");
-}
-
 .container {
 	width: 400px; height: 160px;
 	display: flex;
@@ -53,7 +18,8 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	font-family: Montserrat Alternates;
+	font-family: var(--montserrat);
+	font-weight: 500;
     color: #000;
 	text-transform: uppercase;
 	text-decoration: none;
