--- a/src/components/partners/styles.module.css
+++ b/src/components/partners/styles.module.css
@@ -1,33 +1,3 @@
-@font-face {
-	font-family: Montserrat Alternates;
-	src: url("./../../app/fonts/MontserratAlternates-Medium.woff2");
-}
-
-@font-face {
-	font-family: Montserrat Alternates Bold;
-	src: url("./../../app/fonts/MontserratAlternates-Bold.woff2");
-}
-
-@font-face {
-	font-family: Montserrat Alternates ExtraLight;
-	src: url("./../../app/fonts/MontserratAlternates-ExtraLight.woff2");
-}
-
-@font-face {
-	font-family: Montserrat Alternates Light;
-	src: url("./../../app/fonts/MontserratAlternates-Light.woff2");
-}
-
-@font-face {
-	font-family: Montserrat Alternates Regular;
-	src: url("./../../app/fonts/MontserratAlternates-Regular.woff2");
-}
-
-@font-face {
-	font-family: Montserrat Alternates Thin;
-	src: url("./../../app/fonts/MontserratAlternates-Thin.woff2");
-}
-
 .container {
 	min-height: 100vh;
 	background-color: #fff;
@@ -39,7 +9,8 @@
 
 .title {
 	color: #000;
-    font-family: Montserrat Alternates Bold;
+	font-family: var(--montserrat);
+	font-weight: 700;
     font-size: 38px;
 	margin-bottom: 40px;
 	padding-top: 60px;
