--- a/src/components/subs/choice/choicestyles.module.css
+++ b/src/components/subs/choice/choicestyles.module.css
@@ -1,13 +1,3 @@
-@font-face {
-	font-family: Montserrat bold;
-	src: url('./../../../app/fonts/MontserratAlternates-Bold.woff2');
-}
-
-@font-face {
-	font-family: Montserrat;
-	src: url('./../../../app/fonts/MontserratAlternates-Medium.woff2');
-}
-
 .container {
 	height: 80vh; width: 100vw;
 	position: relative;
@@ -32,7 +22,8 @@
 }
 
 .title {
-	font-family: Montserrat bold;
+	font-family: var(--montserrat);
+	font-weight: 700;
 	text-transform: uppercase;
     font-size: 65px;
     margin-bottom: 20px;
@@ -40,7 +31,8 @@
 }
 
 .subtitle {
-	font-family: Montserrat;
+	font-family: var(--montserrat);
+	font-weight: 500;
     font-size: 28px;
     margin-bottom: 40px;
 	text-align: center;
@@ -54,7 +46,8 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	font-family: Montserrat;
+	font-family: var(--montserrat);
+	font-weight: 500;
     color: #fff;
 	text-decoration: none;
 	font-size: 20px;
