--- a/src/components/welcome/styles.module.css
+++ b/src/components/welcome/styles.module.css
@@ -1,15 +1,3 @@
-@font-face {
-	font-family: Montserrat Alternates;
-	src: url("./../../app/fonts/MontserratAlternates-Medium.woff2");
-}
-
-@font-face {
-	font-family: Montserrat Alternates Bold;
-	src: url("./../../app/fonts/MontserratAlternates-Bold.woff2");
-}
-
-
-
 .container {
 	height: 100vh;
 	background-size: cover;
@@ -30,11 +18,13 @@
 }
 
 .title {
-	font-family: Montserrat Alternates Bold;
+	font-family: var(--montserrat);
+	font-weight: 700;
     color: #ffffff;
 }
 .subtitle {
-	font-family: Montserrat Alternates;
+	font-family: var(--montserrat);
+	font-weight: 600;
     color: #FFD014;
 }
 
@@ -45,7 +35,8 @@
 	width: 140px;
 	background-color: #000;
     border-radius: 50px;
-    font-family: Montserrat Alternates Bold;
+	font-family: var(--montserrat);
+	font-weight: 700;
     font-size: 14px;
     color: #ffffff;
     padding: 15px 32px;
