--- a/src/components/menu/position.module.scss
+++ b/src/components/menu/position.module.scss
@@ -2,166 +2,116 @@
 	position: relative;
 	display: flex;
 	flex-direction: column;
+	aspect-ratio: 7/10;
 }
 
+$border-radius: 20px;
+$highlight-color: #000;
+$transformation: translate(var(--x), -30px);
+
+.container {
+	height: 70%; aspect-ratio: 1/1;
+	position: relative;
+	display: block;
+	transition: all .4s ease-in-out;
+	border-radius: $border-radius;
+
+	&:hover {
+		.desc {
+            display: flex;
+			opacity: 1;
+        }
+		.photo {
+			display: none;
+        }
+		transform: $transformation;
+	}
+}
+
+.border {
+	z-index: -1;
+	position: absolute;
+	height: calc(70% - 2px * 2 * 3);
+	aspect-ratio: 1/1;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	border-radius: $border-radius;
+	border: 2px $highlight-color dashed;
+}
 
 .photo {
-	display: inline-block;
-	height: 70%; aspect-ratio: 1/1;
-	align-self: center;
-	border-radius: 20px;
-	background-color: transparent;
-	margin-bottom: 10px;
-	perspective: 800px;
-	-webkit-perspective: 800px;
-	cursor: pointer;
-	transition: transform 1s;
-	transform-style: preserve-3d;
-	user-select: none;
-	-webkit-tap-highlight-color: transparent;
-	float: none;
-
-	&:hover > .front {
-		transform: perspective(1000px) rotateY(180deg);
-		-webkit-transform: rotateY(180deg);
-		-moz-transform: rotateY(180deg);
-		-o-transform: rotateY(180deg);
-		-ms-transform: rotateY(180deg);
-		transform: rotateY(180deg);
-    }
-
-	&:hover > .desc {
-		transform: perspective(1000px) rotateY(0deg);
-		-webkit-transform: perspective(1000px) rotateY(0deg);
-		-moz-transform: perspective(1000px) rotateY(0deg);
-		-o-transform: perspective(1000px) rotateY(0deg);
-		-ms-transform: perspective(1000px) rotateY(0deg);
-		transform: perspective(1000px) rotateY(0deg);
-	}
-
-	div {
-		user-select: none;
-		-webkit-tap-highlight-color: transparent;
-		float: none;
-	}
-}
-
-
-.front {
 	height: 100%; aspect-ratio: 1/1;
 	position: relative;
-	-webkit-perspective: 1000px;
-	perspective: 1000px;
-	// transform-style: preserve-3d;
-	// -webkit-transform-style: preserve-3d;
-	-webkit-backface-visibility: hidden;
-	-moz-backface-visibility: hidden;
-	backface-visibility: hidden;
-	filter: grayscale(10%);
-	transition: transform ease-in-out 1s;
-}
+	border-radius: $border-radius;
 
-
-.photo img {
-	width: 100%; height: 100%;
-	border-radius: 20px;
-	// -webkit-perspective: 800px;
-	// perspective: 800px;
-	// transform-style: preserve-3d;
-	// -webkit-transform-style: preserve-3d;
-	// -webkit-backface-visibility: hidden;
-	// -moz-backface-visibility: hidden;
-	// backface-visibility: hidden;
+	img {
+		border-radius: 18px;
+	}
 }
 
 .desc {
-	width: 100%; height: 100%;
-	top: 0; left: 0;
-	position: absolute;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+	opacity: 0;
+	display: none;
 	flex-direction: column;
-	font-size: 14px;
-	-webkit-backface-visibility: hidden;
-	-moz-backface-visibility: hidden;
-	backface-visibility: hidden;
-	transform: perspective(1000px) rotateY(-180deg);
-	background-color: rgba(223, 228, 240, 0.4);
-	border-radius: 20px;
-	transition: transform ease-in-out 1s;
-}
-
-.descInner {
-	width: 95%; height: 100%;
-	position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
-    font-size: 14px;
-}
-
-.kpfc {
-	padding: 12px 5px;
+	justify-content: space-between;
+	align-self: center;
+	justify-self: center;
+	width: calc(100% - 2px * 2);
+	height: 100%;
+	border-radius: $border-radius;
+	border: $highlight-color 2px solid;
 	font-family: var(--montserrat);
-	font-weight: 600;
-    font-size: 14px;
-    border-radius: 20px;
-	white-space: pre-line;
+	background-color: #DFE4F0;
+
+
+	p {
+		font-weight: 500;
+		padding: 12px 12px;
+	}
+	
+	.kpfc {
+		text-align: center;
+		font-weight: 600;
+	}
 }
 
-.description {
-	text-align:left;
-	padding: 12px 5px;
-	max-width: 100%;
+
+
+
+////////////////////////////////////////////////////
+.info {
+	display: flex;
+	flex-direction: column;
+	gap: 3px;
 	font-family: var(--montserrat);
-	font-weight: 500;
-	white-space: pre-line;
-}
-
-
-
-.name {
-	max-width: 280px;
-	font-family: var(--montserrat);
-	font-weight: 600;
-    font-size: 22px;
 	padding-left: 3px;
-	margin-bottom: 10px;
-	text-transform: capitalize;
+	padding-top: 10px;
+
+	h2 {
+		font-weight: 600;
+		font-size: 22px;
+	}
+	
+    p {
+        font-weight: 400;
+		font-size: 20px;
+    }
 }
 
-.g {
-	font-family: var(--montserrat);
-	font-weight: 400;
-    font-size: 20px;
-	padding-left: 3px;
-	margin-bottom: 3px;
-}
-
-.price {
-	font-family: var(--montserrat);
-	font-weight: 400;
-    font-size: 20px;
-	padding-left: 3px;
-}
 
 @media screen and (width >= 1024px) {
 	.item {
 		height: 500px;
-	}
-	.description {
-		font-size: 16px;
+		--x: -30px;
 	}
 }
 
 @media screen and (width < 1024px) {
 	.item {
 		height: 500px;
-	}
-	.description {
-		font-size: 16px;
+		--x: -30px;
 	}
 }
 
@@ -169,9 +119,7 @@
 @media screen and (width <= 500px) {
 	.item {
 		height: 400px;
+		--x: 	0px;
 	}
-	.description {
-        font-size: 14px;
-    }
 }
 
