--- a/src/components/menu/position.module.scss
+++ b/src/components/menu/position.module.scss
@@ -115,6 +115,7 @@ $shadow: var(--x-shadow) 15px 10px 0px rgba(0, 0, 0, 0.3);
 
 	h2 {
 		font-weight: 600;
+		text-transform: capitalize;
 	}
 	
     p {
