some image optimisation

--- a/src/components/parallax/styles.module.css
+++ b/src/components/parallax/styles.module.css
@@ -1,7 +1,6 @@
 .parallax{
 	height: 100vh;
 	width: 100vw;
-	background-image: url("./../../../public/white_background.jpg");
 	position: fixed;
 	z-index: -5;
 }
@@ -42,7 +41,7 @@
 	border-radius: 50px;
 	background-color: #EAA73E;
 	
-	--num: 4; /* num of children except .main*/
+	--num: 1; /* num of children except .main*/
 }
 
 .contacts:hover {
@@ -153,8 +152,7 @@
 		height: 59px;
 	}
 	.contacts:hover{
-		/* height: calc(55px + 55px * var(--num) + 10px); */
-		height: calc(59px + 49px * 1 + 10px * 1 + 10px);
+		height: calc(59px + 59px * var(--num) + 10px);
 	}
 	.link::before {
 		background: #000;
@@ -177,8 +175,7 @@
 		height: 55px;
 	}
 	.contacts:hover{
-		/* height: calc(55px + 55px * var(--num) + 10px); */
-		height: calc(55px + 55px * 1 + 10px);
+		height: calc(55px + 55px * var(--num) + 10px);
 	}
 
 	.link::before {
@@ -202,8 +199,7 @@
 		height: 47px;
 	}
 	.contacts:hover{
-		/* height: calc(50px + 45px * var(--num) + 10px * var(--num) + 10px); */
-		height: calc(50px + 55px * 1 + 10px);
+		height: calc(50px + 55px * var(--num) + 10px);
 	}
 	.link::before {
 		transform: scale(1);
