--- a/src/components/welcome/styles.module.css
+++ b/src/components/welcome/styles.module.css
@@ -75,6 +75,10 @@
     color: #000;
 }
 @media screen and (min-width: 1024px) {
+	.container {
+        background-image: url("./../../../public/welcome_background.jpg");
+        background-repeat: no-repeat;
+    }
 	.titles {
         padding-left: 8vw;
 		width: 430px;
@@ -103,6 +107,10 @@
 }
 
 @media screen and (max-width: 1024px) {
+	.container {
+        background-image: url("./../../../public/welcome_background.jpg");
+        background-repeat: no-repeat;
+    }
 	.titles {
 		width: 45vw;
 		padding-left: 10vw;
@@ -160,6 +168,7 @@
 	.container {
 		width: 100vw;
 		display: flex;
+		background-image: url("./../../../public/welcome2_background.jpg");
 		flex-direction: column;
 		align-items: center;
 		justify-content: center;
