--- a/src/components/subs/choice/choicestyles.module.css
+++ b/src/components/subs/choice/choicestyles.module.css
@@ -1,5 +1,5 @@
 .container {
-	height: 80vh; width: 100vw;
+	height: 70vh; width: 100vw;
 	position: relative;
 	display: flex;
 	flex-direction: column;
@@ -22,7 +22,6 @@
 }
 
 .title {
-	font-family: var(--montserrat);
 	font-weight: 700;
 	text-transform: uppercase;
     font-size: 65px;
@@ -31,7 +30,6 @@
 }
 
 .subtitle {
-	font-family: var(--montserrat);
 	font-weight: 500;
     font-size: 28px;
     margin-bottom: 40px;
@@ -46,7 +44,6 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	font-family: var(--montserrat);
 	font-weight: 500;
     color: #fff;
 	text-decoration: none;
@@ -58,7 +55,9 @@
 }
 
 .button:hover {
-    box-shadow: #ad771f inset 10px 10px 10px;
+    box-shadow: #d48f1f 0px 20px 40px;
+    box-shadow: #ad771f 0px 10px 20px;
+	translate: 0px -10px;
 }
 
 .dl {
@@ -79,4 +78,22 @@
 .line {
 	width: 60vw; height: 4px;
 	background-color: #EAA73E;
+}
+
+@media screen and (width <= 500px) {
+	.title {
+		font-size: 55px;
+	}
+}
+
+@media screen and (width <= 375px) {
+	.title {
+		font-size: 45px;
+	}
+}
+
+@media screen and (width <= 320px) {
+	.title {
+		font-size: 35px;
+	}
 }
