--- a/src/blocks/menu/position.module.scss
+++ b/src/blocks/menu/position.module.scss
@@ -109,11 +109,11 @@ $shadow: var(--x-shadow) 15px 10px 0px rgba(0, 0, 0, 0.3);
 	display: flex;
 	flex-direction: column;
 	gap: 3px;
-	font-family: var(--montserrat);
 	padding-left: 3px;
 	padding-top: 10px;
 
 	h2 {
+		font-size: 20px;
 		font-weight: 600;
 		text-transform: capitalize;
 	}
