--- a/src/containers/menu/styles.module.scss
+++ b/src/containers/menu/styles.module.scss
@@ -6,6 +6,53 @@
   align-items: center;
   scroll-behavior: smooth;
   margin-bottom: 60px;
+  nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+    margin-bottom: 60px;
+    a {
+      border: 4px solid #000;
+      border-radius: 30px;
+      color: #000;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: 700;
+      text-decoration: none;
+      text-transform: uppercase;
+      transition: all 0.3s;
+      scroll-behavior: smooth;
+      background-color: transparent;
+      font-size: 14px;
+      width: 12vw;
+      height: 6vh;
+      &:hover {
+        background-color: rgba(8, 23, 63, 0.3);
+        color: #fff;
+        border-color: transparent;
+      }
+      @media screen and (width <= 768px) {
+        width: 18vw;
+      }
+      @media screen and (width <= 768px) {
+        font-size: 12px;
+        width: 25vw;
+      }
+    }
+    div {
+      display: flex;
+      align-items: center;
+      gap: 50px;
+      @media screen and (width <= 768px) {
+        gap: 5vw;
+      }
+    }
+
+    @media screen and (width < 500px) {
+    }
+  }
 }
 
 .main a {
@@ -14,39 +61,8 @@
 
 .title {
   font-weight: 700;
-}
-
-.links {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.links div {
-  display: flex;
-  align-items: center;
-  gap: 50px;
-}
-
-.link {
-  border: 4px solid #000;
-  border-radius: 30px;
-  color: #000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-weight: 700;
-  text-decoration: none;
-  text-transform: uppercase;
-  transition: all 0.3s;
-  scroll-behavior: smooth;
-  background-color: transparent;
-}
-
-.link:hover {
-  background-color: rgba(8, 23, 63, 0.3);
-  color: #fff;
-  border: 4px solid transparent;
+  font-size: 52px;
+  margin-bottom: 60px;
 }
 
 .unit {
@@ -93,79 +109,29 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  gap: 50px;
+  max-width: 90%;
+  @media screen and (width < 500px) {
+    max-width: 100%;
+    gap: 40px;
+  }
 }
 
 @media screen and (width > 1024px) {
-  .title {
-    font-size: 38px;
-    margin-bottom: 60px;
-  }
-  .link {
-    height: 46px;
-    width: 180px;
-    font-size: 14px;
-  }
-  .links {
-    gap: 40px;
-    margin-bottom: 60px;
-  }
-  .links div {
-    gap: 50px;
-  }
   .unitTitle {
     font-size: 38px;
   }
   .unitSubtitle {
     font-size: 28px;
-  }
-  .items {
-    width: 86%;
-    gap: 60px;
   }
 }
 
 @media screen and (width <= 1024px) {
-  .title {
-    font-size: 38px;
-    margin-bottom: 40px;
-  }
-  .link {
-    height: 46px;
-    width: 180px;
-    font-size: 14px;
-  }
-  .links {
-    gap: 40px;
-    margin-bottom: 60px;
-  }
-  .links div {
-    gap: 50px;
-  }
   .unitTitle {
     font-size: 38px;
   }
   .unitSubtitle {
     font-size: 28px;
-  }
-  .items {
-    width: 86%;
-    gap: 60px;
-    justify-content: center;
-  }
-}
-
-@media screen and (width <= 896px) {
-  .link {
-    max-height: 40px;
-    width: 140px;
-    font-size: 14px;
-  }
-  .links {
-    margin-bottom: 50px;
-  }
-
-  .links div {
-    gap: 30px;
   }
 }
 
@@ -211,11 +177,6 @@
   }
   .links div {
     gap: 8px;
-  }
-  .items {
-    width: 100%;
-    gap: 30px;
-    justify-content: center;
   }
 }
 
