--- a/src/containers/menu/styles.module.scss
+++ b/src/containers/menu/styles.module.scss
@@ -24,14 +24,13 @@
       text-transform: uppercase;
       transition: all 0.3s;
       scroll-behavior: smooth;
-      background-color: transparent;
       font-size: 14px;
       width: 12vw;
       height: 6vh;
       &:hover {
         background-color: rgba(8, 23, 63, 0.3);
         color: #fff;
-        border-color: transparent;
+        border: 4px solid transparent; // keeps size same, just hides it
       }
       @media screen and (width <= 768px) {
         width: 18vw;
@@ -69,6 +68,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 25px;
 }
 
 .unitTitle {
@@ -106,14 +106,17 @@
 }
 
 .items {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 50px;
-  max-width: 90%;
-  @media screen and (width < 500px) {
-    max-width: 100%;
-    gap: 40px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 5vw;
+
+  @media screen and (max-width: 768px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media screen and (max-width: 500px) {
+    grid-template-columns: 1fr;
+    gap: 10vw;
   }
 }
 
